grade yukseltildi kaldırıldı
