# docs/swagger.json
@@ -5227,9 +5227,6 @@
                 "identity_no": {
                     "type": "string"
                 },
-                "is_grade_up": {
-                    "type": "boolean"
-                },
                 "last_name": {
                     "type": "string"
                 },
@@ -6079,9 +6076,6 @@
                 "identity_no": {
                     "type": "string"
                 },
-                "is_grade_up": {
-                    "type": "boolean"
-                },
                 "last_name": {
                     "type": "string"
                 },
@@ -6520,9 +6514,6 @@
                 },
                 "identity_no": {
                     "type": "string"
-                },
-                "is_grade_up": {
-                    "type": "boolean"
                 },
                 "last_name": {
                     "type": "string"
